--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "description": "Feedly notifier is a tiny extension that keeps you up to date with your feedly subscriptions.",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-string-replace": "~0.2.4",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-zip": "~0.9.2"
+    "grunt-zip": "^0.17.1"
   },
   "repository": {
     "type": "git",
