--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,30 +1,34 @@
 {
-    "manifest_version": 2,
-
-    "name": "Feedly Notifier",
-    "description": "__MSG_ExtensionDescription__",
-    "version": "1.2.1",
-    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
-    "default_locale": "en",
-
-    "permissions": [
-        "storage",
-        "tabs",
-        "webRequest",
-        "*://*.feedly.com/"
-    ],
-    "browser_action": {
-        "default_icon": "/images/icon_inactive.png",
-        "default_title": "Feedly Notifier",
-        "default_popup": "popup.html"
+  "background": {
+    "scripts": [
+      "scripts/feedly.api.js",
+      "scripts/core.js"
+    ]
+  },
+  "browser_action": {
+    "default_icon": {
+      "19": "/images/icon_inactive.png",
+      "38": "/images/icon_inactive38.png"
     },
-    "options_page": "options.html",
-    "background": {
-        "scripts": ["scripts/feedly.api.js", "scripts/core.js"]
-    },
-    "icons": {
-        "16": "/images/icon16.png",
-        "48": "/images/icon48.png",
-        "128": "/images/icon128.png"
-    }
+    "default_popup": "popup.html",
+    "default_title": "Feedly Notifier"
+  },
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+  "default_locale": "en",
+  "description": "__MSG_ExtensionDescription__",
+  "icons": {
+    "128": "/images/icon128.png",
+    "16": "/images/icon16.png",
+    "48": "/images/icon48.png"
+  },
+  "manifest_version": 2,
+  "name": "Feedly Notifier",
+  "options_page": "options.html",
+  "permissions": [
+    "storage",
+    "tabs",
+    "webRequest",
+    "*://*.feedly.com/"
+  ],
+  "version": "1.2.2"
 }
